...
        let button = FloatingButton(withAutoLayout: true)
        let config = UIImage.SymbolConfiguration(pointSize: 25, weight: .regular)
        if let image = UIImage(systemName: "wrench.adjustable.fill", withConfiguration: config) {
            button.setImage(image.withRenderingMode(.alwaysTemplate), for: .normal)
        }
        button.addTarget(self, action: #selector(tweakButtonAction), for: .touchUpInside)
        button.accessibilityIdentifier = "pinwheel.settings"
        return button
    }()

    private lazy var buttonsView: UIView = {
        let views = UIView()
        views.translatesAutoresizingMaskIntoConstraints = false
...
